--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\ApplicationRegistration.cs" />
     <Compile Include="Registration\ComponentRegistration.cs" />
+    <Compile Include="Registration\Registration.cs" />
     <Compile Include="Registration\SystemRegistration.cs" />
     <Compile Include="Builders\RuleBuilder.cs" />
     <Compile Include="Services\RegistrationService.cs" />
