Added interpreter implementation for dynamic condition

--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -41,7 +41,15 @@
   <ItemGroup>
     <Compile Include="Builders\LogBuilder.cs" />
     <Compile Include="ActivityMonitoring.cs" />
+    <Compile Include="Event\EventCondition.cs" />
+    <Compile Include="Event\EventContext.cs" />
     <Compile Include="Event\EventParameter.cs" />
+    <Compile Include="Event\Conditions\EventEqualExpression.cs" />
+    <Compile Include="Event\Conditions\EventAndExpression.cs" />
+    <Compile Include="Event\Conditions\EventBoolean.cs" />
+    <Compile Include="Event\Parameters\EventLiteral.cs" />
+    <Compile Include="Event\Conditions\EventOrExpression.cs" />
+    <Compile Include="Event\Parameters\EventVariable.cs" />
     <Compile Include="Managers\ActivityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\ApplicationRegistration.cs" />
