--- a/LogManagementTests/LogManagementTests.csproj
+++ b/LogManagementTests/LogManagementTests.csproj
@@ -52,9 +52,10 @@
   <ItemGroup>
     <Compile Include="Implementations\Authentication.cs" />
     <Compile Include="Implementations\SecurityCredential.cs" />
-    <Compile Include="RegistrationTests.cs" />
+    <Compile Include="ActivityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InterpreterTests.cs" />
+    <Compile Include="EventRuleTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogManagement\LogManagement.csproj">
