--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -41,17 +41,17 @@
   <ItemGroup>
     <Compile Include="Builders\LogBuilder.cs" />
     <Compile Include="ActivityMonitoring.cs" />
-    <Compile Include="Event\Conditions\EventLessThanExpression.cs" />
-    <Compile Include="Event\Conditions\EventGreatherThanExpression.cs" />
-    <Compile Include="Event\Conditions\EventNotExpression.cs" />
+    <Compile Include="Event\Conditions\LessThanExpression.cs" />
+    <Compile Include="Event\Conditions\GreatherThanExpression.cs" />
+    <Compile Include="Event\Conditions\NotExpression.cs" />
     <Compile Include="Event\EventContext.cs" />
-    <Compile Include="Event\Conditions\EventEqualToExpression.cs" />
-    <Compile Include="Event\Conditions\EventAndExpression.cs" />
+    <Compile Include="Event\Conditions\EqualToExpression.cs" />
+    <Compile Include="Event\Conditions\AndExpression.cs" />
     <Compile Include="Event\EventRule.cs" />
     <Compile Include="Event\Parameters\EventBoolean.cs" />
     <Compile Include="Event\Parameters\EventData.cs" />
     <Compile Include="Event\Parameters\EventLiteral.cs" />
-    <Compile Include="Event\Conditions\EventOrExpression.cs" />
+    <Compile Include="Event\Conditions\OrExpression.cs" />
     <Compile Include="Event\Parameters\EventLiteralBoolean.cs" />
     <Compile Include="Event\Parameters\EventVariable.cs" />
     <Compile Include="Managers\ActivityManager.cs" />
