--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -44,16 +44,16 @@
     <Compile Include="Event\Conditions\LessThanExpression.cs" />
     <Compile Include="Event\Conditions\GreatherThanExpression.cs" />
     <Compile Include="Event\Conditions\NotExpression.cs" />
-    <Compile Include="Event\EventContext.cs" />
+    <Compile Include="Event\Context.cs" />
     <Compile Include="Event\Conditions\EqualToExpression.cs" />
     <Compile Include="Event\Conditions\AndExpression.cs" />
-    <Compile Include="Event\EventRule.cs" />
-    <Compile Include="Event\Parameters\EventBoolean.cs" />
-    <Compile Include="Event\Parameters\EventData.cs" />
-    <Compile Include="Event\Parameters\EventLiteral.cs" />
+    <Compile Include="Event\Rule.cs" />
+    <Compile Include="Event\Parameters\BooleanBase.cs" />
+    <Compile Include="Event\Parameters\Data.cs" />
+    <Compile Include="Event\Parameters\Literal.cs" />
     <Compile Include="Event\Conditions\OrExpression.cs" />
-    <Compile Include="Event\Parameters\EventLiteralBoolean.cs" />
-    <Compile Include="Event\Parameters\EventVariable.cs" />
+    <Compile Include="Event\Parameters\LiteralBoolean.cs" />
+    <Compile Include="Event\Parameters\Variable.cs" />
     <Compile Include="Managers\ActivityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Registration\ApplicationRegistration.cs" />
