--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -41,6 +41,8 @@
   <ItemGroup>
     <Compile Include="Builders\LogBuilder.cs" />
     <Compile Include="ActivityMonitoring.cs" />
+    <Compile Include="Event\Conditions\GreatherThanOrEqualToExpression.cs" />
+    <Compile Include="Event\Conditions\LessThanOrEqualToExpression .cs" />
     <Compile Include="Event\Conditions\LessThanExpression.cs" />
     <Compile Include="Event\Conditions\GreatherThanExpression.cs" />
     <Compile Include="Event\Conditions\NotExpression.cs" />
