--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Event\Conditions\OrExpression.cs" />
     <Compile Include="Event\Conditions\BooleanExpression.cs" />
     <Compile Include="Event\Parameters\Variable.cs" />
+    <Compile Include="Event\RuleParser.cs" />
     <Compile Include="Managers\ActivityManager.cs" />
     <Compile Include="Managers\RuleManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
