--- a/LogManagementTests/LogManagementTests.csproj
+++ b/LogManagementTests/LogManagementTests.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
   </ItemGroup>
   <Choose>
@@ -56,12 +60,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InterpreterTests.cs" />
     <Compile Include="RuleTests.cs" />
-    <Compile Include="Resources\Syntax.Designer.cs">
+    <Compile Include="Resources\Files.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Syntax.resx</DependentUpon>
+      <DependentUpon>Files.resx</DependentUpon>
     </Compile>
     <Compile Include="RuleParserTests.cs" />
+    <Compile Include="LogTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogManagement\LogManagement.csproj">
@@ -70,13 +75,17 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Syntax.resx">
+    <EmbeddedResource Include="Resources\Files.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Syntax.Designer.cs</LastGenOutput>
+      <LastGenOutput>Files.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\LogFormat.txt" />
     <Content Include="Resources\SourceCode1.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
