Segregate dynamic logging

--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -39,34 +39,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActivityMonitoring.cs" />
-    <Compile Include="Event\Conditions\GreatherThanOrEqualToExpression.cs" />
-    <Compile Include="Event\Conditions\LessThanOrEqualToExpression .cs" />
-    <Compile Include="Event\Conditions\LessThanExpression.cs" />
-    <Compile Include="Event\Conditions\GreatherThanExpression.cs" />
-    <Compile Include="Event\Conditions\NotExpression.cs" />
-    <Compile Include="Event\Context.cs" />
-    <Compile Include="Event\Conditions\EqualToExpression.cs" />
-    <Compile Include="Event\Conditions\AndExpression.cs" />
-    <Compile Include="Event\Rule.cs" />
-    <Compile Include="Event\Parameters\BooleanBase.cs" />
-    <Compile Include="Event\Parameters\Data.cs" />
-    <Compile Include="Event\Parameters\Literal.cs" />
-    <Compile Include="Event\Conditions\OrExpression.cs" />
-    <Compile Include="Event\Conditions\BooleanExpression.cs" />
-    <Compile Include="Event\Parameters\Variable.cs" />
-    <Compile Include="Event\RuleParser.cs" />
+    <Compile Include="Dynamic\ActivityMonitoring.cs" />
+    <Compile Include="Dynamic\Event\Conditions\GreatherThanOrEqualToExpression.cs" />
+    <Compile Include="Dynamic\Event\Conditions\LessThanOrEqualToExpression .cs" />
+    <Compile Include="Dynamic\Event\Conditions\LessThanExpression.cs" />
+    <Compile Include="Dynamic\Event\Conditions\GreatherThanExpression.cs" />
+    <Compile Include="Dynamic\Event\Conditions\NotExpression.cs" />
+    <Compile Include="Dynamic\Event\Context.cs" />
+    <Compile Include="Dynamic\Event\Conditions\EqualToExpression.cs" />
+    <Compile Include="Dynamic\Event\Conditions\AndExpression.cs" />
+    <Compile Include="Dynamic\Event\Rule.cs" />
+    <Compile Include="Dynamic\Event\Parameters\BooleanBase.cs" />
+    <Compile Include="Dynamic\Event\Parameters\Data.cs" />
+    <Compile Include="Dynamic\Event\Parameters\Literal.cs" />
+    <Compile Include="Dynamic\Event\Conditions\OrExpression.cs" />
+    <Compile Include="Dynamic\Event\Conditions\BooleanExpression.cs" />
+    <Compile Include="Dynamic\Event\Parameters\Variable.cs" />
+    <Compile Include="Dynamic\Event\RuleParser.cs" />
     <Compile Include="Managers\LogManager.cs" />
     <Compile Include="Models\LogEntry.cs" />
-    <Compile Include="Managers\ActivityManager.cs" />
-    <Compile Include="Managers\RuleManager.cs" />
+    <Compile Include="Dynamic\Managers\ActivityManager.cs" />
+    <Compile Include="Dynamic\Managers\RuleManager.cs" />
     <Compile Include="Models\StaticLogEntryWrapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Registration\ApplicationRegistration.cs" />
-    <Compile Include="Registration\ComponentRegistration.cs" />
-    <Compile Include="Registration\Registration.cs" />
-    <Compile Include="Registration\SystemRegistration.cs" />
-    <Compile Include="Services\RegistrationService.cs" />
+    <Compile Include="Dynamic\Registration\ApplicationRegistration.cs" />
+    <Compile Include="Dynamic\Registration\ComponentRegistration.cs" />
+    <Compile Include="Dynamic\Registration\Registration.cs" />
+    <Compile Include="Dynamic\Registration\SystemRegistration.cs" />
+    <Compile Include="Dynamic\Services\RegistrationService.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
