--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -56,6 +56,11 @@
     <Compile Include="Dynamic\Event\Conditions\BooleanExpression.cs" />
     <Compile Include="Dynamic\Event\Parameters\Variable.cs" />
     <Compile Include="Dynamic\Event\RuleParser.cs" />
+    <Compile Include="LogAnalyzer.cs" />
+    <Compile Include="LogPersistency.cs" />
+    <Compile Include="LogQueryObject.cs" />
+    <Compile Include="LogRepository.cs" />
+    <Compile Include="LogTrigger.cs" />
     <Compile Include="Managers\LogManager.cs" />
     <Compile Include="Models\LogEntry.cs" />
     <Compile Include="Dynamic\Managers\ActivityManager.cs" />
