--- a/LogManagementTests/LogManagementTests.csproj
+++ b/LogManagementTests/LogManagementTests.csproj
@@ -57,6 +57,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Implementations\Authentication.cs" />
+    <Compile Include="Implementations\GetFailedInvocationLogsQuery.cs" />
     <Compile Include="Implementations\SecurityCredential.cs" />
     <Compile Include="Dynamic\ActivityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -70,6 +71,7 @@
     <Compile Include="Dynamic\RuleParserTests.cs" />
     <Compile Include="LogTests.cs" />
     <Compile Include="StaticLogEntryWrapperTests.cs" />
+    <Compile Include="LogAnalyzerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LogManagement\LogManagement.csproj">
