Amend log analyzer

--- a/LogManagementTests/LogManagementTests.csproj
+++ b/LogManagementTests/LogManagementTests.csproj
@@ -57,7 +57,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Implementations\Authentication.cs" />
+    <Compile Include="Implementations\GetFailedValidationDescriptionLogsQuery.cs" />
     <Compile Include="Implementations\GetFailedInvocationLogsQuery.cs" />
+    <Compile Include="Implementations\LogEntryKVP.cs" />
     <Compile Include="Implementations\SecurityCredential.cs" />
     <Compile Include="Dynamic\ActivityManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
