--- a/LogManagement/LogManagement.csproj
+++ b/LogManagement/LogManagement.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Dynamic\Event\Conditions\BooleanExpression.cs" />
     <Compile Include="Dynamic\Event\Parameters\Variable.cs" />
     <Compile Include="Dynamic\Event\RuleParser.cs" />
-    <Compile Include="LogAnalyzer.cs" />
+    <Compile Include="LogMonitor.cs" />
     <Compile Include="LogPersistency.cs" />
     <Compile Include="LogQueryObject.cs" />
     <Compile Include="LogRepository.cs" />
